# actions_playground

./: .gitmodules  CMakeLists.txt
.github/workflows/: macos-clang.yml  macos-gcc.yml  ubuntu-clang.yml  ubuntu-gcc.yml  ubuntu-latest.yml
machines/: macos-clang.sh  macos-gcc.sh  ubuntu-clang.sh  ubuntu-gcc.sh  ubuntu.sh
src/: main.cpp
test/: CMakeLists.txt  mytest.cpp
